src/index.css
:root {
  --fonts: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-family: var(--fonts);
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: black;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

* {
  font-family: var(--fonts);
}

::selection {
  background-color: rgba(99, 177, 255, 0.4);
  color: white;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: 0.2s;
}

li {
  list-style: none;
}

a {
  font-weight: 500;
  color: var(--theme-color);
  text-decoration: inherit;
}

html,
body {
  min-height: 100vh;
  min-width: 100vw;
}

input {
  background-color: black;
  border: 1px solid grey;
  border-radius: 5px;
  width: 100%;
  padding: 0 10px;
  font-size: 1rem;
}

textarea {
  resize: none;
}

input:disabled {
  border-color: rgb(36, 36, 36);
  color: rgb(181, 181, 181);
}

input[type='file'] {
  display: none;
}

textarea:focus,
input:focus {
  outline: none;
  border-color: var(--theme-color);
}

label {
  color: grey;
  position: relative;
}

label:focus-within {
  color: var(--theme-color);
}

button {
  border: none;
  font-size: 1rem;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
  padding: 15px;
  border-radius: 10px;
  font-weight: 700;
  background-color: var(--theme-color);
}

button:hover {
  background-color: rgb(85, 151, 217);
}

button:disabled {
  opacity: 0.9;
  cursor: default;
}

button:hover:disabled {
  background-color: var(--theme-color);
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
}

